# IoT-Based-Authentication

./: Answers.md  README.md
Client/: CMakeLists.txt  Readme.md
Client/headers/: cpsapplication.h  cpsmainwindow.h
Client/src/: cpsapplication.cpp  cpshistorywindow.cpp  cpsmainwindow.cpp
Embedded/sketch_apr22a/: sketch_apr22a.ino
Proteus/: Entrance_Management.pdsprj  Entrance_Management.pdsprj.DESKTOP-C6J73GG.Amir Ali.workspace
Proteus/Project Backups/: Entrance_Management [20240421, 17-24-13].pdsprj  Entrance_Management [20240421, 17-24-14].pdsprj  Entrance_Management [20240422, 19-05-56].pdsprj  Entrance_Management [20240422, 21-37-58].pdsprj  Entrance_Management [20240423, 13-11-26].pdsprj  Entrance_Management [20240424, 16-45-25].pdsprj  Entrance_Management [20240425, 14-28-49].pdsprj  Entrance_Management [20240426, 02-51-57].pdsprj  Entrance_Management [20240426, 13-00-52].pdsprj  Entrance_Management [20240426, 15-04-53].pdsprj  Entrance_Management [20240426, 20-16-22].pdsprj  Entrance_Management [Autosaved].pdsprj
Server/: CMakeLists.txt
Server/database/: History.json  RFID_tags.json
Server/header/: RFIDVerifier.h  entranceHistory.h  entranceItem.h  httpServer.h  wsRequest.h  wsResponse.h  wsServer.h
Server/src/: RFIDVerifier.cpp  entranceHistory.cpp  entranceItem.cpp  httpServer.cpp  main.cpp  wsRequest.cpp  wsResponse.cpp  wsServer.cpp
